tg-4890 [FE] Se agrega el link de "Agregar otro procedimiento sobre la pieza" deshabilitado.

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.scss
@@ -33,3 +33,15 @@ div {
 .subtitle-findings-procedures-font-size{
 	font-size: 13.5px;
 }
+
+.activate-button{
+	color: #2687C5;
+}
+
+.activate-button:hover{
+	text-decoration: underline;
+}
+
+.disable-button{
+	color: #9c9fa3;
+}
