tg-4931 [FE] Se elimina del componente typeahead la lógica para desactivar el botón de eliminar.

--- a/front-end/apps/projects/hospital/src/app/modules/core/components/typeahead/typeahead.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/core/components/typeahead/typeahead.component.html
@@ -15,7 +15,7 @@
 			</mat-option>
 		</mat-autocomplete>
 
-		<button *ngIf="form.value?.searchValue?.length" id="clear" type="button" color="warn" mat-icon-button matSuffix (click)="clear($event)" [disabled]="disabledClearButton">
+		<button *ngIf="form.value?.searchValue?.length" id="clear" type="button" color="warn" mat-icon-button matSuffix (click)="clear($event)">
 			<mat-icon>close</mat-icon>
 		</button>
 
