tg-4916. [FE] Mantener seleccionada pestaña Historico HSI al filtrar con las tablas de problemas

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/problemas/problemas.component.html
@@ -219,7 +219,7 @@
 
 		<h2 class="page-title" [translate]="'ambulatoria.paciente.problemas.HISTORICAL_TITLE'"></h2>
 
-		<mat-tab-group>
+		<mat-tab-group [(selectedIndex)]="selectedTab">
 
 			<mat-tab>
 				<ng-template mat-tab-label>
