--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/external-clinical-history/external-clinical-history.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/external-clinical-history/external-clinical-history.component.html
@@ -26,7 +26,7 @@
 					{{ 'ambulatoria.paciente.problemas.external-clinical-history.CONSULTATION_DATE' | translate }}
 				</div>
 				<div>
-					{{ this.DATE_TO_VIEW }}
+					{{ this.DATE_TO_VIEW | viewDateDto : 'date' | date: 'dd/MM/yyyy'}}
 				</div>
 			</div>
 		</div>
