--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/odontologia/components/tooth-dialog/tooth-dialog.component.html
@@ -12,7 +12,7 @@
 	</div>
 
 	<div id="records" style="font-size: 13.5px;" *ngIf="historicalRecords$ | async as historicalRecords">
-		<span *ngIf="!historicalRecords.length; else displayRecords" style="color: #A8A8A8;">Sin registros.</span>
+		<span *ngIf="!historicalRecords.length; else displayRecords" style="color: #A8A8A8;">Sin registros previos.</span>
 		<ng-template #displayRecords>
 			<div fxLayout="column" fxLayoutGap="10px">
 				<div fxLayout="row" fxLayoutGap="5px">
